user: Fix x-session -> xsession property notification

Introduced by commit 9982e50b891074a711c43c5d7acc71cb793eb14d

https://bugs.freedesktop.org/show_bug.cgi?id=58493